--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
   <title>flex</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="app-wrap">
-  <header class="app-header"></header>
+  <header class="app-header">
+    <a href="" class="button">
+      <i class="fa fa-arrow-left"></i>
+      Back
+    </a>
+    <h1>没有回忆的海洋</h1>
+    <a href="" class="button">
+      <i class="fa fa-user">关于</i>
+    </a>
+  </header>
   <div class="content">
     <p>
       肖申克的救赎是IMDB和豆瓣电影排行榜双料第一，也是很多人心目中的No.1。它给了很多处在困境中的人以力量。
@@ -51,7 +61,12 @@
       愿你们都有一片没有回忆的海洋。
     </p>
   </div>
-  <div class="app-footer"></div>
+  <div class="app-footer">
+    <a href="#">
+      <i class="fa fa-home"></i>
+      Home
+    </a>
+  </div>
 </div>
 </body>
 </html>
