--- a/source/index.html
+++ b/source/index.html
@@ -11,12 +11,13 @@
 <div class="app-wrap">
   <header class="app-header">
     <a href="" class="button">
-      <i class="fa fa-arrow-left"></i>
-      Back
+      <i class="fa fa-user"></i>
+      关于
     </a>
     <h1>没有回忆的海洋</h1>
     <a href="" class="button">
-      <i class="fa fa-user">关于</i>
+      <i class="fa fa-diamond"></i>
+      更多
     </a>
   </header>
   <div class="content">
@@ -62,7 +63,18 @@
     </p>
   </div>
   <div class="app-footer">
-  </div>
+    <a href="">
+      <i class="fa fa-arrow-left"></i>
+      下一篇
+    </a>
+    <a href="#">
+      <i class="fa fa-home"></i>
+      主页
+    </a>
+    <a href="">
+      <i class="fa fa-arrow-right"></i>
+      上一篇
+    </a>
 </div>
 </body>
 </html>
