--- a/no-memory-ocean.html
+++ b/no-memory-ocean.html
@@ -20,6 +20,25 @@
       更多
     </a>
   </header>
+  <section class="sidebar">
+    <h2>Another RayJune</h2>
+    <a href="index.html">
+      <i class="fa fa-home"></i>
+        主页
+    </a>
+    <a href="no-memory-ocean.html">
+      <i class="fa fa-book"></i>
+        文章
+    </a>
+    <a href="index.html">
+      <i class="fa fa-diamond"></i>
+        作品
+    </a>
+    <a href="about.html">
+      <i class="fa fa-user"></i>
+        关于
+    </a>
+  </section>
   <div class="content">
 
     <p>
